Demo Site | Fixes overflow issue that was appearing on certain mobile devices.

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -17,6 +17,8 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-size: 62.5%;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 section {
